--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -28,12 +28,6 @@
         margin: 0;
         z-index: 1000;
 
-        font-size: 14px;
-        line-height: 1.1em;
-        text-transform: none;
-        white-space: normal;
-        font-weight: normal;
-
         @include animation(fade-in $animation-timing);
 
         .tooltip-text-content {
@@ -46,6 +40,12 @@
             background: $color-active-blue;
             color: $color-white;
             padding: 10px;
+            font-size: 14px;
+            text-transform: none;
+            white-space: normal;
+            font-weight: normal;
+            line-height: 1.2em;
+            font-family: $font-pn-regular;
             @include border-radius(4px);
 
             &:before {
