ID-3182 : rename new button positioning style and move to buttons file (from inputs)
Change-Id: I58b769acd528d03867e6cf6b99ca26caa04b8d39

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -181,6 +181,13 @@ input[type=button], input[type=submit], .button, button {
 		line-height: $height;
 		font-size: 15px;
 	}
+	&.row-button {
+		vertical-align: bottom;
+
+		&.inline {
+			margin: 0 0 6px 0;
+		}
+	}
 }
 
 
