remove integer scss file include mistakenly left in previous change tweak integer css
Change-Id: I52fa082f94d9304a53f1726623ce223e05a5c513

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1171,7 +1171,7 @@ input[type=file] {
     .up-down-spinner{
         position: absolute;
 		right: 10px;
-
+		bottom: 2px;
         font-family: $icon-font;
         cursor: pointer;
         vertical-align: baseline;
